feat: remove Glovo and Bolt Food links, keep only Wolt

--- a/index.html
+++ b/index.html
@@ -173,25 +173,15 @@
         <!-- ── Order Online ── -->
         <section class="order" id="order">
             <h2 class="section-title" data-en="Order Online" data-ka="შეუკვეთე ონლაინ">Order Online</h2>
-            <p class="section-sub" data-en="Fast delivery across Tbilisi on your favourite platform."
-                data-ka="სწრაფი მიტანა მთელ თბილისში თქვენი საყვარელი პლატფორმით.">Fast delivery across Tbilisi on
-                your favourite platform.</p>
+            <p class="section-sub" data-en="Fast delivery across Tbilisi, exclusively on Wolt."
+                data-ka="სწრაფი მიტანა მთელ თბილისში, ექსკლუზიურად Wolt-ზე.">Fast delivery across Tbilisi, exclusively
+                on Wolt.</p>
 
             <div class="order-grid">
                 <a href="https://wolt.com/en/geo/tbilisi/restaurant/margaliti-collection" target="_blank"
                     class="order-btn order-btn--wolt">
                     <span class="order-icon">🛵</span>
                     <span class="order-text" data-en="Order on Wolt" data-ka="შეუკვეთე Wolt-ზე">Order on Wolt</span>
-                </a>
-                <a href="https://glovoapp.com/ge/en/tbilisi/margaliti-collection-tbilisi/" target="_blank"
-                    class="order-btn order-btn--glovo">
-                    <span class="order-icon">🟡</span>
-                    <span class="order-text" data-en="Order on Glovo" data-ka="შეუკვეთე Glovo-ზე">Order on Glovo</span>
-                </a>
-                <a href="https://food.bolt.eu/en-GE" target="_blank" class="order-btn order-btn--bolt">
-                    <span class="order-icon">⚡</span>
-                    <span class="order-text" data-en="Order on Bolt Food" data-ka="შეუკვეთე Bolt Food-ზე">Order on Bolt
-                        Food</span>
                 </a>
             </div>
         </section>
