Update first highlight image

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="highlight-card">
                 <a href="https://wolt.com/en/geo/tbilisi/restaurant/margaliti-collection/damtsifebuli-mtis-qveli-4-6-tvis-itemid-6932dd1557426151e0bac82b"
                     target="_blank" class="highlight-photo">
-                    <img src="img/post3.jpg" alt="Aged Cheeses">
+                    <img src="img/aged-mountain-cheese.png" alt="Aged Cheeses">
                 </a>
                 <h3 data-en="Aged Cheeses" data-ka="დამწიფებული ყველი">Aged Cheeses</h3>
                 <p data-en="Mountain cheeses aged 4–12 months with deep, complex flavour."
