Update third highlight image

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="highlight-card">
                 <a href="https://wolt.com/en/geo/tbilisi/restaurant/margaliti-collection/sulguni-dmanisuri-500gr-itemid-68eeb033844d08c329eedfea"
                     target="_blank" class="highlight-photo">
-                    <img src="img/post6.jpg" alt="Fresh Dairy">
+                    <img src="img/fresh-dairy.png" alt="Fresh Dairy">
                 </a>
                 <h3 data-en="Fresh Dairy" data-ka="სუფრის ყოველდღიური">Fresh Dairy</h3>
                 <p data-en="Sulguni, Imeruli, and fresh dairy from the Swiss Agricultural School Caucasus."
