Update popular picks thumbnails

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <a href="https://wolt.com/en/geo/tbilisi/restaurant/margaliti-collection/damtsifebuli-mtis-qveli-4-6-tvis-itemid-6932dd1557426151e0bac82b"
                     target="_blank" class="pick-card">
                     <div class="pick-photo">
-                        <img src="img/post1.jpg" alt="Aged Mountain Cheese">
+                        <img src="img/aged-mountain-cheese.png" alt="Aged Mountain Cheese">
                     </div>
                     <div class="pick-body">
                         <h3 data-en="Aged Mountain Cheese" data-ka="დამწიფებული მთის ყველი">Aged Mountain Cheese</h3>
@@ -134,7 +134,7 @@
                 <a href="https://wolt.com/en/geo/tbilisi/restaurant/margaliti-collection/sulguni-dmanisuri-500gr-itemid-68eeb033844d08c329eedfea"
                     target="_blank" class="pick-card">
                     <div class="pick-photo">
-                        <img src="img/post5.jpg" alt="Sulguni Dmanisi">
+                        <img src="img/sulguni_confirmed.png" alt="Sulguni Dmanisi">
                     </div>
                     <div class="pick-body">
                         <h3 data-en="Sulguni, Dmanisi" data-ka="სულგუნი, დმანისური">Sulguni, Dmanisi</h3>
@@ -147,7 +147,7 @@
                 <a href="https://wolt.com/en/geo/tbilisi/restaurant/margaliti-collection/kamemberi-itemid-6811c26e18dad4ee26a8c99d"
                     target="_blank" class="pick-card">
                     <div class="pick-photo">
-                        <img src="img/post4.jpg" alt="Camembert">
+                        <img src="img/camembert.png" alt="Camembert">
                     </div>
                     <div class="pick-body">
                         <h3 data-en="Camembert" data-ka="კამემბერი">Camembert</h3>
@@ -160,7 +160,7 @@
                 <a href="https://wolt.com/en/geo/tbilisi/restaurant/margaliti-collection/dmanisuri-chizkeiki-1ts-itemid-6811c26e18dad4ee26a8c933"
                     target="_blank" class="pick-card">
                     <div class="pick-photo">
-                        <img src="img/post7.jpg" alt="Dmanisi Cheesecake">
+                        <img src="img/dmanisi-cheesecake.png" alt="Dmanisi Cheesecake">
                     </div>
                     <div class="pick-body">
                         <h3 data-en="Dmanisi Cheesecake" data-ka="დმანისური ჩიზქეიქი">Dmanisi Cheesecake</h3>
