Add Milk to Popular Picks

--- a/index.html
+++ b/index.html
@@ -170,6 +170,19 @@
                     </div>
                     <div class="pick-arrow">↗</div>
                 </a>
+
+                <a href="https://wolt.com/en/geo/tbilisi/restaurant/margaliti-collection/nedli-rdze-sakutari-fermidan-0-5l-itemid-68e7c64793a7d9a5327549f8"
+                    target="_blank" class="pick-card">
+                    <div class="pick-photo">
+                        <img src="img/milk.png" alt="Fresh Milk">
+                    </div>
+                    <div class="pick-body">
+                        <h3 data-en="Fresh Milk" data-ka="ნედლი რძე">Fresh Milk</h3>
+                        <p class="pick-note" data-en="0.5L · From our own farm" data-ka="0.5ლ · საკუთარი ფერმიდან">0.5L
+                            · From our own farm</p>
+                    </div>
+                    <div class="pick-arrow">↗</div>
+                </a>
             </div>
         </section>
 
