Add Nuri Portfolio section with infinite marquee

--- a/index.html
+++ b/index.html
@@ -223,7 +223,67 @@
             </div>
         </section>
 
-        <!-- ── Footer ── -->
+        <!-- ── Nuri Portfolio ── -->
+        <section class="portfolio">
+            <div class="portfolio-header">
+                <h2 class="section-title" data-en="More by Nuri" data-ka="მეტი Nuri-სგან">More by Nuri</h2>
+                <p class="section-sub" data-en="Handcrafted digital experiences."
+                    data-ka="ხელნაკეთი ციფრული გამოცდილებები.">Handcrafted digital experiences.</p>
+            </div>
+
+            <div class="marquee-container">
+                <div class="marquee-track">
+                    <!-- Original Set -->
+                    <div class="marquee-content">
+                        <a href="https://warren.ge" target="_blank" class="portfolio-card">
+                            <img src="img/portfolio/warren.png" alt="Warren Cafe">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/castaways.jpg" alt="Castaways">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/katiecakes.png" alt="Katie Cakes">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/mao.png" alt="Mao Bubble Tea">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/hiragana.png" alt="Hiragana Practice">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/katakana.png" alt="Katakana Practice">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/margaliti.png" alt="Margaliti Collection">
+                        </a>
+                    </div>
+                    <!-- Duplicate Set for Seamless Loop -->
+                    <div class="marquee-content">
+                        <a href="https://warren.ge" target="_blank" class="portfolio-card">
+                            <img src="img/portfolio/warren.png" alt="Warren Cafe">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/castaways.jpg" alt="Castaways">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/katiecakes.png" alt="Katie Cakes">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/mao.png" alt="Mao Bubble Tea">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/hiragana.png" alt="Hiragana Practice">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/katakana.png" alt="Katakana Practice">
+                        </a>
+                        <a href="#" class="portfolio-card">
+                            <img src="img/portfolio/margaliti.png" alt="Margaliti Collection">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer class="footer">
             <div class="social-links">
                 <a href="https://www.instagram.com/collectionmargaliti/" target="_blank" class="social-btn">
